<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.egarden.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_add_new_plant"
            app:destination="@id/navigation_add_new_plant" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_new_plant"
        android:name="com.example.egarden.AddPlantFragment"
        android:label="@string/title_add_plant"
        tools:layout="@layout/fragment_add_plant" >
        <action
            android:id="@+id/action_navigation_add_new_plant_self"
            app:destination="@id/navigation_add_new_plant" />
    </fragment>
    <fragment
        android:id="@+id/navigation_view_garden"
        android:name="com.example.egarden.ViewPlantsFragment"
        android:label="@string/title_view_garden"
        tools:layout="@layout/fragment_view_plants" >
        <action
            android:id="@+id/action_navigation_view_garden_to_navigation_remove_plant"
            app:destination="@id/navigation_remove_plant" />
    </fragment>

    <fragment
        android:id="@+id/navigation_remove_plant"
        android:name="com.example.egarden.RemovePlantFragment"
        android:label="@string/title_remove_plant"
        tools:layout="@layout/fragment_remove_plant" />

</navigation>