<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/app_name"
        android:background="@color/bacground"
        android:gravity="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:layout_marginTop="-30dp"
        android:textFontWeight="400"
        android:text="@string/sign_in"
        android:textSize="80sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etname"
            android:layout_width="245dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/text_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/password"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etPassWord"
            android:layout_width="245dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:textFontWeight="400"
        android:backgroundTint="@color/buttonColor"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:textFontWeight="400"
        android:backgroundTint="@color/buttonColor"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_up"/>

</androidx.appcompat.widget.LinearLayoutCompat>