<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlantFragment"
    android:orientation="vertical"
    android:background="@color/background"
    android:id="@+id/frag_add_plant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPlantImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_menu_gallery"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/cardBackground"
            app:strokeWidth="5dp"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabtnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_camera"
            android:backgroundTint="@color/cardBackground"
            app:rippleColor="@color/buttonColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imgPlantImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textFontWeight="500"
        android:text="@string/take_pic"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etPlantName"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/enter_plant_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPlantSpecies"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/enter_plant_species"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAddPlant"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/title_add_plant"
        android:textFontWeight="400"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>